js: another pass on java syntax upgrade, code cleanup